--- a/templates/contact.html
+++ b/templates/contact.html
@@ -3,4 +3,28 @@
 {% block title%}Contact{% endblock title%}
 
 {% block body%}
+
+<div class="container-fluid px-0">
+
+    <img src="https://source.unsplash.com/1200x400/?phone,contact" class="d-block w-100 mx-0" alt="...">
+    <h3 class="text-center">Contact Us</h3>
+</div>
+
+
+<div class="container">
+<div class="mb-3">
+    <label for="exampleFormControlInput1" class="form-label">Name</label>
+    <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Enter your name">
+</div>
+<div class="mb-3">
+    <label for="exampleFormControlInput1" class="form-label">Email address</label>
+    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+</div>
+<div class="mb-3">
+    <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+</div>
+
+</div>
+
 {%endblock body%}
